--- a/varaa_kierros_ajat_salasana.html
+++ b/varaa_kierros_ajat_salasana.html
@@ -3,7 +3,7 @@
 <html lang="fi">
 <head>
     <meta charset="UTF-8">
-    <title>Varaa kierros</title>
+    <title>Varaa Vuoro</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body { font-family: Arial, sans-serif; background: #f7f7f7; margin: 0; padding: 0; }
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Varaa kierros</h1>
+        <h1>Varaa Vuoro!</h1>
         <p>Valitse vapaa aika ja kirjoita nimesi varataksesi. Kun aika on varattu, nimi näkyy ja kukaan muu ei voi varata sitä. Varaus voidaan poistaa vain salasanalla.</p>
         <div class="tur-list" id="turList"></div>
         <div class="kello">Kello on: <span id="kello">--:--:--</span></div>
